[package]
name = "chr-js-rs-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.121"
tokio = { version = "1.39.2", features = ["full"] }
